@@ -8,17 +8,23 @@
 
   <groupId>edu.umd.lib</groupId>
   <artifactId>umd-fcrepo-webapp</artifactId>
-  <name>Fedora Repository Deployable Web Application</name>
+  <name>UMD Fedora Repository Deployable Web Application</name>
   <description>The Fedora web application</description>
-  <version>2.4.2</version>
+  <version>2.5.0</version>
   <packaging>war</packaging>
 
   <properties>
+    <apache.commons.validator.version>1.7</apache.commons.validator.version>
     <fcrepo.version>4.7.5-umd-1.0</fcrepo.version>
     <logback.version>1.1.7</logback.version>
     <pgsql.version>9.4.1211</pgsql.version>
-    <spring.version>4.3.18.RELEASE</spring.version>
+    <spring.version>4.3.20.RELEASE</spring.version>
+    <spring.security.web.version>4.2.19.RELEASE</spring.security.web.version>
     <jersey.version>2.24</jersey.version>
+    <java.cas.client.version>3.6.0</java.cas.client.version>
+    <warFileName>${project.artifactId}-${project.version}</warFileName>
+    <junit.version>4.13.1</junit.version>
+    <jwt.version>0.11.2</jwt.version>
   </properties>
 
   <distributionManagement>
@@ -33,6 +39,31 @@
       <url>https://maven.lib.umd.edu/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>nexus</id>
+      <name>Releases</name>
+      <url>https://maven.lib.umd.edu/nexus/content/repositories/releases</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>nexus-snapshots</id>
+      <name>Snapshots</name>
+      <url>https://maven.lib.umd.edu/nexus/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -87,9 +118,79 @@
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.security.web.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jasig.cas.client</groupId>
+      <artifactId>cas-client-core</artifactId>
+      <version>${java.cas.client.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.ldaptive</groupId>
+        <artifactId>ldaptive</artifactId>
+        <version>1.2.4</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>${apache.commons.validator.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>${jwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>${jwt.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+      <version>${jwt.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <!-- Uncomment this next dependency if you are using JDK 10 or earlier and you also want to use
+         RSASSA-PSS (PS256, PS384, PS512) algorithms.  JDK 11 or later does not require it for those algorithms:
+    <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.60</version>
+        <scope>runtime</scope>
+    </dependency>
+    -->
+
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    
+    <!-- Test dependencies --> 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
+    <finalName>${warFileName}</finalName>
+
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -118,6 +219,67 @@
               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
             </manifest>
           </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <version>1.8.1</version>
+        <configuration>
+          <container>
+            <containerId>tomcat7x</containerId>
+            <!-- download zip url -->
+            <zipUrlInstaller>
+              <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.88/bin/apache-tomcat-7.0.88.zip</url>
+              <downloadDir>${project.build.directory}/downloads</downloadDir>
+              <extractDir>${project.build.directory}/extracts</extractDir>
+            </zipUrlInstaller>
+            <systemProperties>
+              <MODESHAPE_DB_URL>jdbc:postgresql://localhost:5432/fcrepo_modeshape5</MODESHAPE_DB_URL>
+              <MODESHAPE_DB_DRIVER>org.postgresql.Driver</MODESHAPE_DB_DRIVER>
+              <MODESHAPE_DB_USERNAME>fcrepo</MODESHAPE_DB_USERNAME>
+              <FCREPO_BASE_URL>http://localhost:8080/</FCREPO_BASE_URL>
+              <ACTIVEMQ_URL>tcp://localhost:61616</ACTIVEMQ_URL>
+              <CAS_URL_PREFIX>https://shib.idm.umd.edu/shibboleth-idp/profile/cas</CAS_URL_PREFIX>
+              <LDAP_URL>ldap://directory.umd.edu</LDAP_URL>
+              <LDAP_BASE_DN>ou=people,dc=umd,dc=edu</LDAP_BASE_DN>
+              <LDAP_BIND_DN>uid=libr-fedora,cn=auth,ou=ldap,dc=umd,dc=edu</LDAP_BIND_DN>
+              <LDAP_MEMBER_ATTRIBUTE>memberOf</LDAP_MEMBER_ATTRIBUTE>
+              <LDAP_ADMIN_GROUP>cn=Application_Roles:Libraries:FCREPO:FCREPO-Administrator,ou=grouper,ou=group,dc=umd,dc=edu</LDAP_ADMIN_GROUP>
+              <LDAP_USER_GROUP>cn=Application_Roles:Libraries:FCREPO:FCREPO-User,ou=grouper,ou=group,dc=umd,dc=edu</LDAP_USER_GROUP>
+              <IP_MAPPING_FILE>conf/test-ip-mapping.properties</IP_MAPPING_FILE>
+              <CREDENTIALS_FILE>conf/basic-auth.properties</CREDENTIALS_FILE>
+            </systemProperties>
+          </container>
+          <configuration>
+            <properties>
+              <!-- the umd-fcrepo_mail service uses the default (8025) -->
+              <cargo.rmi.port>1099</cargo.rmi.port>
+              <!-- Debug Mode On -->
+              <cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>
+              <!-- Debug Mode Off -->
+              <!--<cargo.jvmargs>-Xnoagent -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>-->
+            </properties>
+            <configfiles>
+              <configfile>
+                <!-- Include "test-ip-mapping.properties" for the IP Mapping Filter for use as default mapping file-->
+                <file>${project.basedir}/src/test/resources/test-ip-mapping.properties</file>
+                <todir>conf</todir>
+              </configfile>
+              <configfile>
+                <!-- BasicAuthFilter configuration file -->
+                <file>${project.basedir}/src/test/resources/basic-auth.properties</file>
+                <todir>conf</todir>
+              </configfile>
+            </configfiles>
+          </configuration>
+          <deployables>
+            <deployable>
+              <properties>
+                <context>/</context>
+              </properties>
+            </deployable>
+          </deployables>
         </configuration>
       </plugin>
     </plugins>
